--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "description": "practice project of Node with TypeScript",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon dist/app.js",
+    "watch": "npx tsc -w"
   },
   "author": "Syk Houdeib",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/node": "^18.7.14",
     "nodemon": "^2.0.19",
     "typescript": "^4.8.2"
   },
