--- a/package.json
+++ b/package.json
@@ -11,13 +11,18 @@
   "author": "Syk Houdeib",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/node": "^18.7.14",
     "nodemon": "^2.0.19",
     "typescript": "^4.8.2"
   },
   "dependencies": {
+    "aws-sdk": "^2.1221.0",
+    "axios": "^0.27.2",
     "body-parse": "^0.1.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.2",
     "express": "^4.18.1"
   }
 }
