--- a/package.json
+++ b/package.json
@@ -2,20 +2,21 @@
   "name": "node_ts",
   "version": "1.0.0",
   "description": "practice project of Node with TypeScript",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon dist/app.js",
-    "watch": "npx tsc -w"
-  },
   "author": "Syk Houdeib",
   "license": "ISC",
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/node": "^18.7.14",
+    "@types/react": "^18.0.21",
+    "@types/react-dom": "^18.0.6",
+    "html-webpack-plugin": "^5.5.0",
     "nodemon": "^2.0.19",
-    "typescript": "^4.8.2"
+    "ts-loader": "^9.4.1",
+    "typescript": "^4.8.2",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
     "aws-sdk": "^2.1221.0",
@@ -23,6 +24,14 @@
     "body-parse": "^0.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
+  "scripts": {
+    "start:backend": "nodemon dist/server/server.js",
+    "start:frontend": "webpack-dev-server --mode development --open --hot",
+    "watch": "npx tsc -w",
+    "build": "webpack --mode production"
   }
 }
