Add basic components and CSS
Implement CSS loaders
Create basic components
Add dev notes
Install CLSX

--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "@types/node": "^18.7.14",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
+    "css-loader": "^6.7.1",
     "html-webpack-plugin": "^5.5.0",
     "nodemon": "^2.0.19",
+    "style-loader": "^3.3.1",
     "ts-loader": "^9.4.1",
     "typescript": "^4.8.2",
     "webpack": "^5.74.0",
@@ -22,6 +24,7 @@
     "aws-sdk": "^2.1221.0",
     "axios": "^0.27.2",
     "body-parse": "^0.1.0",
+    "clsx": "^1.2.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
